--- a/foobar.yaml
+++ b/foobar.yaml
@@ -15,8 +15,7 @@ spec:
     spec:
       containers:
         - name: foo
-          image: twilio-go-foobar
-          imagePullPolicy: Never
+          image: perfectlynormalbeast/twilio-go-foobar
 ---
 apiVersion: v1
 kind: Service
