--- a/foobar.yaml
+++ b/foobar.yaml
@@ -23,10 +23,9 @@ metadata:
   name: bar
   namespace: default
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     foo: web
   ports:
-    - port: 5000
+    - port: 80
       targetPort: 5000
-      nodePort: 30000
